# meteor

./: .gitignore  5M_QPS_ACHIEVEMENT_ROADMAP.md  AOF_TRUNCATION_ANALYSIS.md  BENCHMARK_RESULTS_4C_12C.md  BOOST_FIBER_TEMPORAL_COHERENCE_IMPLEMENTATION.md  BUILD_AND_TEST_SUMMARY.md  BUILD_TEST_STATUS_1_2B_PIPELINE_FIXES.md  CMakeLists.txt  COMMERCIAL_LRU_TTL_FEATURES.md  COMPREHENSIVE_FIX_READY.txt  COMPREHENSIVE_NEXT_STEPS_ANALYSIS.md  CONNECTION_FIXED_ANALYSIS_SUMMARY.md  CONSTRUCTOR_FIXES_SUMMARY.md  CORES_EQUALS_SHARDS_SOLUTION.md  CORE_SHARD_ROUTING_BUG_ANALYSIS.md  CRITICAL_BUG_ANALYSIS.md  CROSS_SHARD_CORRECTNESS_ANALYSIS.md  CROSS_SHARD_ISSUE_ANALYSIS.md  DASH_HASH_ENHANCED_BENCHMARK_RESULTS.md  DASH_HASH_ENHANCED_CONNECTION_FIXES.md  DASH_HASH_ENHANCED_CONNECTION_FIXES_FINAL.md  DEADLOCK_FREE_TTL_TESTING_GUIDE.md  DEFINITIVE_SINGLE_COMMAND_CORRECTNESS_ANALYSIS.md  DRAGONFLY_BOTTLENECK_ANALYSIS.md  DRAGONFLY_COMPREHENSIVE_ANALYSIS.md  FIBER_ENHANCED_HIGH_LOAD_ANALYSIS.md  FINAL_5M_QPS_VALIDATION.md  FINAL_CONSTRUCTOR_FIXES_GUIDE.md  FINAL_PACKAGING_SUMMARY.md  FLASHDB_16_CORE_ARCHITECTURE_ANALYSIS.md  FLASHDB_DEPLOYMENT_SUCCESS_REPORT.md  FLASHDB_FINAL_BENCHMARK_REPORT.md  FLASHDB_FINAL_IMPLEMENTATION_SUMMARY.md  FLASHDB_IOURING_BUILD_SUCCESS.md  FLASHDB_IOURING_CONNECTION_RESET_ANALYSIS_FINAL.md  FLASHDB_MEMTIER_BENCHMARK_RESULTS.md  FLASHDB_PERFORMANCE_MYSTERY_SOLVED.md  FLASHDB_VS_DRAGONFLY_DESIGN_ANALYSIS.md  HANGING_ISSUE_RESOLUTION_SUMMARY.md  HEALTHMONITOR_HANGDETECTOR_SUMMARY.md  (+419 more)
cpp/: DASH_HASH_FIXED_PERFORMANCE_REPORT.md  DASH_HASH_HYBRID_PERFORMANCE_REPORT.md  FINAL_CPU_UTILIZATION_ANALYSIS.md  PHASE1_STEP4_BENCHMARK_ANALYSIS.md  PHASE3_STEP3_IMPLEMENTATION_ANALYSIS.md  PHASE5_VS_DRAGONFLY_ANALYSIS.md  PHASE7_STEP2_COMPREHENSIVE_ANALYSIS.md  PHASE7_STEP2_IMPLEMENTATION_SUMMARY.md  PHASE8_BREAKTHROUGH_SUMMARY.md  README.md  SSD_STORAGE_OPTIMIZATION_ANALYSIS.md  THROUGHPUT_OPTIMIZATION_RESEARCH.md  benchmark_dragonfly_ssd_vm.sh  benchmark_phase5_16core_redis.sh  benchmark_phase5_vs_dragonfly_comprehensive.sh  benchmark_phase6_memtier.sh  benchmark_phase6_multicore_redis.sh  build.sh  build_and_benchmark_ssd_tiering_poc.sh  build_clean_iouring.sh  build_incremental_iouring.sh  build_minimal_temporal.sh  build_phase6_step1_avx512.sh  build_phase6_step1_avx512_numa.sh  build_phase6_step1_optimized.sh  build_phase6_step2_enhanced.sh  build_phase6_step2_multiaccept.sh  build_phase6_step3_dragonfly.sh  build_phase7_step1_dragonfly.sh  build_phase7_step1_fresh.sh  build_phase7_step1_incremental.sh  build_phase7_step1_iouring.sh  build_phase7_step1_optimized.sh  build_phase7_step1_pure.sh  build_phase7_step2_dragonfly_unlimited.sh  build_phase7_step3_dragonfly_dashtable.sh  build_phase7_step3_pipeline_aware.sh  build_phase7_step3_simple_pipeline_fix.sh  build_phase8_step10_high_shard.sh  build_phase8_step11_true_freecache.sh  (+314 more)
deployment/: README.md
docs/: BENCHMARK_RESULTS.md  CHAT_HISTORY.md  CRITICAL_KEY_ROUTING_FIX.md  HLD.md  INNOVATION_SUMMARY.md  LLD.md  LLD_PHASE5_MULTICORE_SIMD.md  METEOR_SUPER_OPTIMIZED_PERFORMANCE_GUIDE.md  PHASE_1_PERFORMANCE_ANALYSIS.md  RESEARCH_GUIDELINES.md  RESEARCH_PAPER_SUBMISSION_GUIDE.md  TEMPORAL_COHERENCE_IMPLEMENTATION_PLAN.md  TEMPORAL_COHERENCE_PAPER_LATEX.tex  TEMPORAL_COHERENCE_PIPELINE_ARCHITECTURE.md  TEMPORAL_COHERENCE_RESEARCH_PAPER.md
scripts/: benchmark_comparison.sh  comprehensive_benchmark.sh  gcp_deploy_and_benchmark.sh  gcp_heavy_load_benchmark.sh  professional_benchmark.sh  quick_benchmark.sh  (+1 more)
(+98 files in other folders)
